Add teacher grade table
