# server/internal/repository/repository.go
@@ -100,6 +100,7 @@ type ClassReadRepository interface {
 	ListLessons(context.Context, Transaction) ([]entity.Lesson, error)
 	ListLessonMaterials(context.Context, Transaction) ([]entity.LessonMaterial, error)
 	ListGradeItems(context.Context, Transaction) ([]entity.GradeItem, error)
+	ListScores(context.Context, Transaction) ([]entity.Score, error)
 	CreateLesson(context.Context, Transaction, entity.Lesson) (entity.Lesson, error)
 	CreateLessonMaterial(context.Context, Transaction, entity.LessonMaterial) (entity.LessonMaterial, error)
 	GetLesson(context.Context, Transaction, uuid.UUID) (entity.Lesson, error)
